--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-MONGO_URI=mongodb+srv://crpoudyal:cr123@cluster0.vbyeouo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://cr:cr123@cluster0.vbyeouo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+PORT=3000
